fix: Update tooltip text font size for consistency and readability; adjust variation in shared configuration

--- a/clients/lunalogic/inogen/ign006/src/experiment.scss
+++ b/clients/lunalogic/inogen/ign006/src/experiment.scss
@@ -42,7 +42,7 @@
     padding: 0.5rem;
     border-radius: 5px;
     width: 230px;
-    font-size: 0.875rem;
+    font-size: 14px;
     font-style: italic;
     white-space: normal;
     text-align: center;
